# topobank-publication

./: CHANGELOG.md  README.rst  conftest.py  publication_test_settings.py  publication_test_urls.py  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: test.yml
tests/: conftest.py  test_anonymous.py  test_api.py  test_commands.py  test_containers.py  test_datacite_integration.py  test_filter.py  test_handling.py  test_models.py  test_oaipmh.py  test_publishing.py  test_rest_api.py  test_results_view.py  test_views.py  test_welcome_page.py
topobank_publication/: apps.py  doi_mixin.py  forms.py  models.py  oaipmh_views.py  serializers.py  signals.py  urls.py  utils.py  version.py  views.py
topobank_publication/management/commands/: complete_dois.py  renew_containers.py
topobank_publication/migrations/: 0002_publication_authors.py  0003_publication_publisher_orcid_id.py  0004_auto_20210510_1252.py  0005_publication_container.py  0006_publication_authors_json.py  0007_transfer_authors_names.py  0008_remove_publication_authors.py  0009_publication_doi_name.py  0010_publication_doi_state.py  0011_auto_20220228_1503.py  0012_alter_publication_original_surface.py  0014_publicationcollection.py  0015_publicationcollection_description_and_more.py
topobank_publication/templates/: license_urls.html  multi_author_field.html  publication_error.html  surface_publish.html
topobank_publication/templatetags/: license_tags.py
topobank_publication/tests/: __init__.py  conftest.py  fixtures.py  test_anonymous.py  test_api.py  test_commands.py  test_containers.py  test_filter.py  test_handling.py  test_models.py  test_publishing.py  test_rest_api.py  test_results_view.py  test_views.py  test_welcome_page.py  utils.py
