[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = 'topobank-publication'
description = 'This is a plugin for "topobank" for publishing digital surface twins (including assigning DOIs) via DataCite.'
requires-python = '>=3.8.0'
readme = 'README.rst'
license = { file = 'LICENSE' }
authors = [
    { name = "Michael Röttger", email = "info@michael-roettger.de" },
    { name = "Lars Pastewka", email = "lars.pastewka@imtek.uni-freiburg.de" }
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Celery',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content'
]
dependencies = [
    'datacite',
    'short_url'
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-django>=4.4.0',
    'pytest-mock',
    'factory-boy',
    'django-celery-results',
    'freezegun',
]

[project.urls]
homepage = 'https://contact.engineering'
repository = 'https://github.com/ContactEngineering/topobank-publication'



[tool.hatch.version]
source = "vcs"
