[flake8]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[pycodestyle]
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[metadata]
name = topobank-publication

[options]
include_package_data = true
packages = find:
install_requires =
    datacite
    short_url

[options.extras_require]
dev =

[options.entry_points]
topobank.plugins =
    topobank_publication = topobank_publication.apps.PublicationPluginConfig

